--- a/client/package.json
+++ b/client/package.json
@@ -37,6 +37,7 @@
     "@radix-ui/react-toggle-group": "^1.1.3",
     "@radix-ui/react-tooltip": "^1.2.0",
     "@tanstack/react-query": "^5.60.5",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^11.13.1",
     "lucide-react": "^0.453.0",
@@ -56,8 +57,8 @@
     "zod-validation-error": "^3.4.0"
   },
   "devDependencies": {
-    "@vitejs/plugin-react": "^4.3.2",
     "@tailwindcss/typography": "^0.5.15",
+    "@vitejs/plugin-react": "^4.3.2",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.17",
