--- a/client/package.json
+++ b/client/package.json
@@ -39,6 +39,7 @@
     "@tanstack/react-query": "^5.60.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "drizzle-zod": "^0.8.2",
     "framer-motion": "^11.13.1",
     "lucide-react": "^0.453.0",
     "react": "^18.3.1",
