--- a/package.json
+++ b/package.json
@@ -4,5 +4,11 @@
   "workspaces": [
     "client",
     "server"
-  ]
+  ],
+  "scripts": {
+    "db:push": "drizzle-kit push",
+    "build": "cd client && npm run build",
+    "dev": "concurrently \"cd server && npm run dev\" \"cd client && npm run dev\"",
+    "install:all": "npm install && cd client && npm install && cd ../server && npm install"
+  }
 }
