--- a/vercel.json
+++ b/vercel.json
@@ -14,6 +14,10 @@
   },
   "rewrites": [
     {
+      "source": "/api/test-db",
+      "destination": "/api/test-db.ts"
+    },
+    {
       "source": "/api/(.*)",
       "destination": "/api/server/index.ts"
     },
