Fix PostCSS config and add mock server setup
- Fixed PostCSS configuration syntax (ES module to CommonJS)
- Added mock server for testing form submissions
- Added Font Awesome icons for better UI
- Configured Vite proxy for API communication
- Added cross-env for Windows compatibility
- Created test scripts and documentation
- Improved frontend UI and form functionality
- Added comprehensive setup instructions

--- a/package.json
+++ b/package.json
@@ -4,5 +4,17 @@
   "workspaces": [
     "client",
     "server"
-  ]
+  ],
+  "scripts": {
+    "db:push": "drizzle-kit push",
+    "build": "cd client && npm install && npm run build && cp -r dist ../dist && npm run db:push",
+    "dev": "concurrently \"cd server && npm run dev\" \"cd client && npm run dev\"",
+    "install:all": "npm install && cd client && npm install && cd ../server && npm install"
+  },
+  "dependencies": {
+    "concurrently": "^9.2.0",
+    "cors": "^2.8.5",
+    "express": "^5.1.0",
+    "node-fetch": "^3.3.2"
+  }
 }
