Add health check API route and update Vercel config

--- a/vercel.json
+++ b/vercel.json
@@ -13,6 +13,9 @@
     },
     "api/migrate.ts": {
       "runtime": "nodejs18.x"
+    },
+    "api/health.ts": {
+      "runtime": "nodejs18.x"
     }
   },
   "rewrites": [
@@ -27,6 +30,10 @@
     {
       "source": "/api/migrate",
       "destination": "/api/migrate.ts"
+    },
+    {
+      "source": "/api/health",
+      "destination": "/api/health.ts"
     },
     {
       "source": "/(.*)",
