--- a/vercel.json
+++ b/vercel.json
@@ -1,31 +1,10 @@
 {
   "version": 2,
-  "buildCommand": "npm run build",
-  "outputDirectory": "dist",
+  "buildCommand": "cd client && npm install && npm run build",
+  "outputDirectory": "client/dist",
   "installCommand": "npm install",
   "framework": "vite",
-  "functions": {
-    "api/test-db.ts": {
-      "runtime": "nodejs18.x"
-    },
-    "api/debug-db.ts": {
-      "runtime": "nodejs18.x"
-    },
-    "api/migrate.ts": {
-      "runtime": "nodejs18.x"
-    },
-    "api/health.ts": {
-      "runtime": "nodejs18.x"
-    },
-    "api/simple-test.ts": {
-      "runtime": "nodejs18.x"
-    }
-  },
   "rewrites": [
-    {
-      "source": "/api/(.*)",
-      "destination": "/api/$1"
-    },
     {
       "source": "/(.*)",
       "destination": "/index.html"
