--- a/vercel.json
+++ b/vercel.json
@@ -1,18 +1,17 @@
 {
   "version": 2,
-  "buildCommand": "cd server && npm install && npm run build",
-  "outputDirectory": "server/dist",
+  "buildCommand": "cd client && npm install && npm run build",
+  "outputDirectory": "client/dist",
   "installCommand": "npm install",
-  "framework": "node",
-  "functions": {
-    "server/index.ts": {
-      "runtime": "nodejs18.x"
-    }
-  },
+  "framework": "vite",
   "rewrites": [
     {
       "source": "/api/(.*)",
-      "destination": "/server/index.ts"
+      "destination": "https://leadsure-backend.vercel.app/api/$1"
+    },
+    {
+      "source": "/(.*)",
+      "destination": "/index.html"
     }
   ],
   "env": {
