Configure single deployment for full-stack app with frontend and backend

--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,18 @@
 {
   "version": 2,
-  "buildCommand": "cd client && npm install && npm run build",
-  "outputDirectory": "client/dist",
+  "buildCommand": "npm run build",
+  "outputDirectory": "dist",
   "installCommand": "npm install",
-  "framework": "vite",
+  "framework": "node",
+  "functions": {
+    "server/index.ts": {
+      "runtime": "nodejs18.x"
+    }
+  },
   "rewrites": [
     {
       "source": "/api/(.*)",
-      "destination": "https://leadsure-backend.vercel.app/api/$1"
+      "destination": "/server/index.ts"
     },
     {
       "source": "/(.*)",
