Fix serverless function crash: improve build process and error handling

--- a/vercel.json
+++ b/vercel.json
@@ -6,7 +6,8 @@
   "framework": "node",
   "functions": {
     "server/index.ts": {
-      "runtime": "nodejs18.x"
+      "runtime": "nodejs18.x",
+      "maxDuration": 30
     }
   },
   "rewrites": [
