--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   ],
   "scripts": {
     "db:push": "drizzle-kit push",
-    "build": "cd client && npm install && npm run build && cp -r dist ../dist && npm run db:push",
+    "build": "cd client && npm install && npm run build && cd .. && npm run copy-dist",
+    "copy-dist": "node -e \"const fs=require('fs');const path=require('path');if(fs.existsSync('client/dist')){fs.cpSync('client/dist','dist',{recursive:true,force:true});console.log('Copied dist files');}\"",
     "dev": "concurrently \"cd server && npm run dev\" \"cd client && npm run dev\"",
     "install:all": "npm install && cd client && npm install && cd ../server && npm install"
   },
