--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "build": "cd client && npm install && npm run build && cd .. && npm run copy-dist",
     "copy-dist": "node -e \"const fs=require('fs');const path=require('path');if(fs.existsSync('client/dist')){fs.cpSync('client/dist','dist',{recursive:true,force:true});console.log('Copied dist files');}\"",
     "dev": "concurrently \"cd server && npm run dev\" \"cd client && npm run dev\"",
-    "install:all": "npm install && cd client && npm install && cd ../server && npm install"
+    "install:all": "npm install && cd client && npm install && cd ../server && npm install",
+    "vercel-build": "npm run build"
   },
   "dependencies": {
     "concurrently": "^9.2.0",
